--- a/hw02.md
+++ b/hw02.md
@@ -3,7 +3,50 @@
 作业2：
 
 # part1
+①72000
 
+②101
+
+③122
+
+④1111010;172
+
+⑤133；5B
+
+⑥1010100110；1246
+
+⑦1100
 
 
 # part2
+1）Information
+
+Information is any entity or form that provides the answer to a question of some kind or resolves uncertainty.
+
+2）Positional notation
+
+Positional notation or place-value notation is a method of representing or encoding numbers.
+
+3）Algorithm
+
+In mathematics and computer science, an algorithm is an unambiguous specification of how to solve a class of problems. 
+
+4）Software bug
+
+A software bug is an error, flaw, failure or fault in a computer program or system that causes it to produce an incorrect or unexpected result, or to behave in unintended ways. 
+
+1）十进制
+
+Decimal system
+
+2）二进制
+
+Binary system
+
+3）八进制
+
+Octal number system
+
+4）十六进制
+
+Hexadecimal
