--- a/hw03.md
+++ b/hw03.md
@@ -3,19 +3,66 @@
 作业3：
 
 # part1
-①x=01000011 y=11111001 z=
+①x=01000011 y=11111001 z=01001010
 
-②x= y= z=
+②x=overflow
 
-③x= y= z=
+③x=11010011
 
-④x= y= z=
+④x=01111111 y=11111001 z=overflow
 
-⑤x= y= z=
 
-⑥x= y= z=
 
-⑦x= y= z=
+5) float x = 1.125;
+6) float x = 23.0;
+7) float x = 0.45;
 
 
 # part2
+一、使用维基百科，解释以下概念。
+
+1)Method of complements
+
+In mathematics and computing, the method of complements is a technique used to subtract one number from another using only addition of positive numbers. 
+
+2)Byte
+
+The byte is a unit of digital information that most commonly consists of eight bits, representing a binary number.
+
+3)Integer (computer science)
+
+In computer science, an integer is a datum of integral data type, a data type that represents some range of mathematical integers.
+
+4)Floating point
+
+In computing, floating-point arithmetic (FP) is arithmetic using formulaic representation of real numbers as an approximation so as to support a trade-off between range and precision.
+
+
+
+
+二、仔细阅读” Method of complements”的内容，你将注意到nines‘ complement in the decimal 和 ones’ complement in binary 等概念.
+
+1)请证明：二进制的负数（two‘s complement of X）等于 X 的 ones’
+complement ＋ 1（即，X每位求反加1）
+
+Sorry，I don’t know.
+
+
+2)Int8_t x = - 017; 请用8进制描述变量 x。在c中017即(017)8 阅读维基百科” Two‘s complement”的内容，特别是Sign extension小节内容。
+
+x=351
+
+1)C程序：int8_t x = -0x1f; int y = x; 
+
+请用16进制描述变量 x 和 y，并说明 int y = x 的计算过程。
+
+x=y=0xffffffe1
+
+2)请用数学证明，为什么可以这么计算。
+
+Sorry，I don’t know.
+
+三、阅读维基百科” Floating point”的内容，
+1) NaN 是什么？
+
+In computing, NaN, standing for not a number, is a numeric data type value representing an undefined or unrepresentable value, especially in floating-point calculations. 
