--- a/hw03.md
+++ b/hw03.md
@@ -50,11 +50,14 @@ Sorry，I don’t know.
 
 2)Int8_t x = - 017; 请用8进制描述变量 x。在c中017即(017)8 阅读维基百科” Two‘s complement”的内容，特别是Sign extension小节内容。
 
-x=351
+-017是八进制对应-15十进制，然后把-15转化成二进制11110001，再求八进制361
+x=361
 
 1)C程序：int8_t x = -0x1f; int y = x; 
 
 请用16进制描述变量 x 和 y，并说明 int y = x 的计算过程。
+
+同1）
 
 x=y=0xffffffe1
 
