--- a/hw03.md
+++ b/hw03.md
@@ -45,7 +45,31 @@ In computing, floating-point arithmetic (FP) is arithmetic using formulaic repre
 1)请证明：二进制的负数（two‘s complement of X）等于 X 的 ones’
 complement ＋ 1（即，X每位求反加1）
 
-Sorry，I don’t know.
+Negative(I)=2^k-I
+
+dn*R-1+dn-1*Rn2+.…+d2*R+d1
+
+
+证明：设某个k位二进制为d<sub>k</sub>d<sub>k-1</sub>...d<sub>2</sub>d<sub>1</sub>(k>1,k∈N)
+
+记其可转换为十进制数 <font color=#00ffff size=3>I</font>
+
+则有I=d<sub>k</sub>*2^(k-1)+d<sub>k-1</sub>*2^(k-2)+...+d<sub>2</sub>*2+d<sub>1</sub>(k>1,k∈N)
+
+∵该二进制的反码为（1-d<sub>k</sub>）（1-d<sub>k-1</sub>）...（1-d<sub>2</sub>）（1-d<sub>1</sub>）
+
+∴（1-d<sub>k</sub>）*2^(k-1)+（1-d<sub>k-1</sub>）*2^(k-2)+...（1-d<sub>2</sub>）*2+（1-d<sub>1</sub>）
+
+=2^(k-1)+2^(k-2)+...+2+1-<font color=#00ffff size=3>I</font>
+
+=2^k-1-<font color=#00ffff size=3>I</font>
+
+由Negative(I)=2^k-<font color=#00ffff size=3>I</font>可知
+
+该二进制的反码（2^k-1-<font color=#00ffff size=3>I</font>）+1即为该二进制的补码2^k-<font color=#00ffff size=3>I</font>
+
+∴原命题成立
+
 
 
 2)Int8_t x = - 017; 请用8进制描述变量 x。在c中017即(017)8 阅读维基百科” Two‘s complement”的内容，特别是Sign extension小节内容。
@@ -63,7 +87,7 @@ x=y=0xffffffe1
 
 2)请用数学证明，为什么可以这么计算。
 
-Sorry，I don’t know.
+Sorry，I don’t know.感觉是用进制转换就OK了
 
 三、阅读维基百科” Floating point”的内容，
 1) NaN 是什么？
