--- a/hw05.md
+++ b/hw05.md
@@ -2,7 +2,7 @@
 
 日期：2018.10.18
 
-# part1
+# part1（由于github图片显示不正常，图片放到博客https://blog.csdn.net/weixin_42479092/article/details/83151396）
 ①三种形式图片：![](https://img-blog.csdn.net/20181018172009206?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjQ3OTA5Mg==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
 
 AND Gate：当输入的两个数为1，则输出1；输入其他两个数字（0或1），输出0。
