--- a/hw06.md
+++ b/hw06.md
@@ -2,4 +2,50 @@
 
 日期：2018.10.25
 
+
 # part1
+①Memory,RAM and ROM,CPU,mouse and keyboard,Secondary Storage Devices,video card.
+
+
+②26bit   (32MB≈2^26B)
+
+
+③Arithmetic/Logic Unit,Control Unit,Bus and Memory,Input/Output Units.
+
+Include cache.
+
+
+④Auxiliary memory[citation needed], also known as auxiliary storage, secondary storage, secondary memory or external memory, is a non-volatile memory (does not lose stored data when the device is powered down) that is not directly accessible by the CPU, because it is not accessed via the input/output channels (it is an external device). 
+
+Magnetic Disks,Compact Disks,Magnetic Tape,U Disk.
+
+
+⑤
+
+CPU:A central processing unit (CPU) is the electronic circuitry within a computer that carries out the instructions of a computer program by performing the basic arithmetic, logical, control and input/output (I/O) operations specified by the instructions.
+
+RAM:Random-access memory (RAM /ræm/) is a form of computer data storage that stores data and machine code currently being used.
+
+ROM:Read-only memory, a type of storage media that is used in computers and other electronic devices
+
+Bus (computing):In computer architecture, a bus[1] (a contraction of the Latin omnibus) is a communication system that transfers data between components inside a computer, or between computers.
+
+Parallel Computing:Parallel computing is a type of computation in which many calculations or the execution of processes are carried out simultaneously.
+
+
+⑥云计算：用户透过浏览器、桌面应用程序或是移动应用程序来访问云的服务。（共享的软硬件资源和信息可以按需求提供服务给计算机各种终端和其他设备。）
+
+
+⑦
+
+<1>3指第三代双倍数据率同步动态随机存取存储器；
+
+1333指内存工作频率
+
+<2>能，1600比1333的工作频率高，可以提高运算速度从而提高性能
+
+<3>相对于8G DDR 1333，两个4G DDR 1333并不能提升性能
+
+<4>2^4*2^30=2^34  所以34bits
+
+34/8=4.25≈4bytes
