--- a/hw06.md
+++ b/hw06.md
@@ -46,6 +46,6 @@ Parallel Computing:Parallel computing is a type of computation in which many cal
 
 <3>相对于8G DDR 1333，两个4G DDR 1333并不能提升性能
 
-<4>2^4*2^30=2^34  所以34bits
+<4>2^4*2^30=2^34  所以34bytes
 
-34/8=4.25≈4bytes
+另外：34/8=4.25≈4bits
