--- a/hw07.md
+++ b/hw07.md
@@ -1,7 +1,7 @@
 # part1
-①
+①LOD # 1–>STO X –> LOD X –> ADD#3 –> STO Y –> HLT
 
-②
+②Main memory –> Fetch instruction –> Decode instruction –>Registers –>Get data –>Execute the instruction –> Main memory
 
 ③
 
@@ -14,13 +14,13 @@ PC：程序计数器，存放下一条指令在内存中的地址
 ACC：累加寄存器，功能是当运算器的算术逻辑单元(ALU)执行全部算术和逻辑运算时，为ALU提供一个工作区，暂时存放ALU运算结果
 
 
-④
+
 # part2
 ①数据和指令
 
 ②是的
 
-③
+
 
 # part3
 ①An assembly (or assembler) language,often abbreviated asm, is any low-level programming language in which there is a very strong correspondence between the program's statements and the architecture's machine code instructions.
