--- a/hw10.md
+++ b/hw10.md
@@ -73,6 +73,18 @@ Design an algorithm to insert the value of x into the sorted array.
 
 Then test the algorithm with value 50,67,99.
 
+①伪代码
+```
+GET list={60,65,75,80,90,95}
+GET a=50,b=67,c=99
+INCREMENT a,b,c to list		
+			//list={60,65,75,80,90,95,50,67,99}
+dubble(list)
+			//function double
+PRINT list
+```
+
+②程序实现
 ```c
 #include<stdio.h>
 
