--- a/数学证明.md
+++ b/数学证明.md
@@ -1,3 +1,15 @@
+---
+layout: default
+title: 使用 Letax 公式
+---
+
+# 使用 Letax 公式完成数学证明
+
+## 1、 Letax 简介
+
+[LaTeX 百度百科](https://baike.baidu.com/item/LaTeX)
+
+[LaTet 数学公式符号速查](http://mohu.org/info/symbols/symbols.htm)
 
 ## 2、 数学证明过程 与 Markdown
 
@@ -27,3 +39,6 @@ $\because$ $$2^{m}-1 = (2-1)\sum_{i=1}^{m}2^{i-1}$$, that is m bits 1. So the sa
 $\therefore$ If N(x) is a negative binary integer, the most-significant bit can be repeated in all the extra bits 
 
 $\blacksquare$ 
+
+
+
