--- a/hw010.md
+++ b/hw010.md
@@ -1,5 +1,5 @@
-# 三种有趣的排序算法
+# 两种有趣的排序算法
 
 与同学合作
 
-地址：https://github.com/HenryHZY/hzy-homework/blob/gh-pages/%E5%BF%AB%E6%8E%92.pptx
+地址：https://github.com/HenryHZY/hzy-homework/blob/gh-pages/%E6%A1%B6%E6%8E%92%E5%BA%8F%2B%E5%BF%AB%E9%80%9F%E6%8E%92%E5%BA%8F.pptx
